# bmbp_marco

./: Cargo.toml  README.md
crates/bmbp_marco/: Cargo.toml
crates/bmbp_marco/src/: lib.rs
crates/bmbp_marco_bean/: Cargo.toml
crates/bmbp_marco_bean/src/: bean.rs  lib.rs  rdbc_bean.rs  rdbc_tree_bean.rs  tree_bean.rs
crates/bmbp_marco_bean/tests/: test.rs  test_bean.rs  test_rdbc_bean.rs  test_rdbc_tree_bean.rs  test_tree_bean.rs
crates/bmbp_marco_curd/: Cargo.toml
crates/bmbp_marco_curd/src/: curd.rs  curd_dao.rs  curd_router.rs  curd_service.rs  curd_valid.rs  lib.rs
crates/bmbp_marco_rdbc/: Cargo.toml
crates/bmbp_marco_rdbc/src/: consts.rs  lib.rs  marco_rdbc_model.rs  orm_row.rs  table.rs  table_bean.rs  table_bean_orm.rs  table_orm.rs  table_rdbc.rs  table_rdbc_bean.rs  table_rdbc_bean_orm.rs  table_rdbc_tree_bean.rs  table_rdbc_tree_bean_orm.rs  table_tree.rs  table_tree_bean.rs  table_tree_bean_orm.rs  table_tree_orm.rs  table_tree_rdbc.rs  types.rs  utils.rs
crates/bmbp_marco_rdbc/src/meta/: mod.rs  model.rs  orm.rs  rdbc.rs
crates/bmbp_marco_rdbc/src/old/: marco_rdbc_model.rs  mod.rs  types.rs  utils.rs
crates/bmbp_marco_rdbc/src/util/: mod.rs  orm_row.rs  table.rs
crates/bmbp_marco_rdbc/tests/: test_rdbc_model.rs  test_table.rs  test_table_bean.rs  test_table_bean_orm.rs  test_table_orm.rs  test_table_rdbc_bean_orm.rs  test_table_rdbc_tree_bean_orm.rs  test_table_tree_bean_orm.rs
crates/bmbp_marco_sql/: Cargo.toml
crates/bmbp_marco_sql/src/: lib.rs
crates/bmbp_marco_util/: Cargo.toml
crates/bmbp_marco_util/src/: util.rs
