[workspace]
members = ["crates/*"]
resolver = "2"
[workspace.package]
version = "0.0.2"
edition = "2021"
authors = ["bmbp<rs_bmbp.163.com>"]
description = "BMBP Marco"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bmbper/bmbp_marco"
repository = "https://github.com/bmbper/bmbp_marco"
documentation = "https://github.com/bmbper/bmbp_marco"
[workspace.dependencies]
bmbp_marco_util = { version = "0.0.5", path = "crates/bmbp_marco_util" }
bmbp_marco_bean = { version = "0.0.4", path = "crates/bmbp_marco_bean" }
bmbp_marco_rdbc = { version = "0.0.2", path = "crates/bmbp_marco_rdbc" }
bmbp_marco_curd = { version = "0.0.2", path = "crates/bmbp_marco_curd" }
bmbp_rdbc_orm = "0.2.1"
bmbp_rdbc = "0.2.1"
bmbp_rdbc_type = "0.2.4"
async-lock = "3.4.0"
async-once-cell = "0.5.3"
async-recursion = "1.1.1"
async_static = "0.1.3"
async-trait = "0.1.81"
base64 = "0.22.1"
case_style = "0.2.1"
chrono = "0.4.38"
convert_case = "0.6.0"
lazy_static = "1.5.0"
md5 = "0.7.0"
once_cell = "1.19.0"
salvo = { version = "0.68.5", features = [
    "default",
    "serve-static",
    "cors",
    "size-limiter",
    "logging",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.10"
serde_repr = "0.1.19"
syn = { version = "2.0.72", features = [
    "full",
    "parsing",
    "printing",
    "proc-macro",
    "clone-impls",
] }
quote = "1.0.36"
proc-macro2 = "1.0.86"
uuid = { version = "1.1.3", features = ["serde", "v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
