[workspace]
members = ["crates/*"]
resolver = "2"
[workspace.package]
version = "0.0.2"
edition = "2021"
authors = ["bmbp<rs_bmbp.163.com>"]
description = "BMBP Marco"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bmbper/bmbp_marco"
repository = "https://github.com/bmbper/bmbp_marco"
documentation = "https://github.com/bmbper/bmbp_marco"
[workspace.dependencies]
bmbp_marco_util = { version = "0.0.2", path = "crates/bmbp_marco_util" }
bmbp_marco_bean = { version = "0.0.3", path = "crates/bmbp_marco_bean" }
bmbp_marco_rdbc = { version = "0.0.2", path = "crates/bmbp_marco_rdbc" }
bmbp_marco_curd = { version = "0.0.2", path = "crates/bmbp_marco_curd" }
bmbp_rdbc_orm = "0.2.1"
bmbp_rdbc = "0.2.1"
bmbp_rdbc_type="0.2.4"
case_style = "0.2.1"
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.10"
serde_repr = "0.1.19"
syn =  "2.0.72"
quote = "1.0.36"
proc-macro2 = "1.0.86"
uuid = { version = "1.1.3", features = ["serde", "v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
