[package]
name = "bmbp_marco_bean"
version = "0.0.4"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation ="https://docs.rs/bmbp_marco_bean/latest/bmbp_marco_bean"
[lib]
proc-macro = true
[dependencies]
bmbp_marco_util =  { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 =  { workspace = true }
case_style = { workspace = true }
serde = { workspace = true }
