[package]
name = "bmbp_marco_curd"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
[lib]
proc-macro = true
[dependencies]
bmbp_marco_util = { workspace = true}
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = "1.0.82"
case_style = { workspace = true }
serde = { workspace = true }