[package]
name = "bmbp_marco_rdbc"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 ={ workspace = true }
case_style = { workspace = true }
serde = { workspace = true }
bmbp_marco_util = { workspace = true}
salvo = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bmbp_rdbc = { workspace = true }
bmbp_rdbc_orm = { workspace = true }