[package]
name = "bmbp_marco_rdbc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
[lib]
proc-macro = true
[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 ={ workspace = true }
case_style = { workspace = true }
serde = { workspace = true }
bmbp_marco_util = { workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bmbp_rdbc_type = { workspace = true }
bmbp_util = {workspace = true}
